# wasm-glpk

./: .gitignore  CMakeLists.txt  README.md
src/: glpk-wasm.cpp  problem.hpp
