cmake_minimum_required(VERSION 3.13)

project(glpk-wasm VERSION 5.0)
add_link_options(--bind -s ENVIRONMENT=web)

include_directories(
        src/glpk
        src/glpk/amd
        src/glpk/api
        src/glpk/bflib
        src/glpk/colamd
        src/glpk/draft
        src/glpk/env
        src/glpk/intopt
        src/glpk/minisat
        src/glpk/misc
        src/glpk/mpl
        src/glpk/npp
        src/glpk/proxy
        src/glpk/simplex
        src/glpk/zlib
)

set(glpk-wasm_SOURCES
        src/glpk-wasm.cpp
        src/glpk/amd/amd_1.c
        src/glpk/amd/amd_2.c
        src/glpk/amd/amd_aat.c
        src/glpk/amd/amd_control.c
        src/glpk/amd/amd_defaults.c
        src/glpk/amd/amd_dump.c
        src/glpk/amd/amd_info.c
        src/glpk/amd/amd_order.c
        src/glpk/amd/amd_post_tree.c
        src/glpk/amd/amd_postorder.c
        src/glpk/amd/amd_preprocess.c
        src/glpk/amd/amd_valid.c
        src/glpk/api/advbas.c
        src/glpk/api/asnhall.c
        src/glpk/api/asnlp.c
        src/glpk/api/asnokalg.c
        src/glpk/api/ckasn.c
        src/glpk/api/ckcnf.c
        src/glpk/api/cplex.c
        src/glpk/api/cpp.c
        src/glpk/api/cpxbas.c
        src/glpk/api/graph.c
        src/glpk/api/gridgen.c
        src/glpk/api/intfeas1.c
        src/glpk/api/maxffalg.c
        src/glpk/api/maxflp.c
        src/glpk/api/mcflp.c
        src/glpk/api/mcfokalg.c
        src/glpk/api/mcfrelax.c
        src/glpk/api/minisat1.c
        src/glpk/api/mpl.c
        src/glpk/api/mps.c
        src/glpk/api/netgen.c
        src/glpk/api/npp.c
        src/glpk/api/pript.c
        src/glpk/api/prmip.c
        src/glpk/api/prob1.c
        src/glpk/api/prob2.c
        src/glpk/api/prob3.c
        src/glpk/api/prob4.c
        src/glpk/api/prob5.c
        src/glpk/api/prrngs.c
        src/glpk/api/prsol.c
        src/glpk/api/rdasn.c
        src/glpk/api/rdcc.c
        src/glpk/api/rdcnf.c
        src/glpk/api/rdipt.c
        src/glpk/api/rdmaxf.c
        src/glpk/api/rdmcf.c
        src/glpk/api/rdmip.c
        src/glpk/api/rdprob.c
        src/glpk/api/rdsol.c
        src/glpk/api/rmfgen.c
        src/glpk/api/strong.c
        src/glpk/api/topsort.c
        src/glpk/api/weak.c
        src/glpk/api/wcliqex.c
        src/glpk/api/wrasn.c
        src/glpk/api/wrcc.c
        src/glpk/api/wrcnf.c
        src/glpk/api/wript.c
        src/glpk/api/wrmaxf.c
        src/glpk/api/wrmcf.c
        src/glpk/api/wrmip.c
        src/glpk/api/wrprob.c
        src/glpk/api/wrsol.c
        src/glpk/bflib/btf.c
        src/glpk/bflib/btfint.c
        src/glpk/bflib/fhv.c
        src/glpk/bflib/fhvint.c
        src/glpk/bflib/ifu.c
        src/glpk/bflib/luf.c
        src/glpk/bflib/lufint.c
        src/glpk/bflib/scf.c
        src/glpk/bflib/scfint.c
        src/glpk/bflib/sgf.c
        src/glpk/bflib/sva.c
        src/glpk/colamd/colamd.c
        src/glpk/draft/bfd.c
        src/glpk/draft/bfx.c
        src/glpk/draft/glpapi06.c
        src/glpk/draft/glpapi07.c
        src/glpk/draft/glpapi08.c
        src/glpk/draft/glpapi09.c
        src/glpk/draft/glpapi10.c
        src/glpk/draft/glpapi12.c
        src/glpk/draft/glpapi13.c
        src/glpk/draft/glpios01.c
        src/glpk/draft/glpios02.c
        src/glpk/draft/glpios03.c
        src/glpk/draft/glpios07.c
        src/glpk/draft/glpios09.c
        src/glpk/draft/glpios11.c
        src/glpk/draft/glpios12.c
        src/glpk/draft/glpipm.c
        src/glpk/draft/glpmat.c
        src/glpk/draft/glpscl.c
        src/glpk/draft/glpssx01.c
        src/glpk/draft/glpssx02.c
        src/glpk/draft/lux.c
        src/glpk/env/alloc.c
        src/glpk/env/dlsup.c
        src/glpk/env/env.c
        src/glpk/env/error.c
        src/glpk/env/stdc.c
        src/glpk/env/stdout.c
        src/glpk/env/stream.c
        src/glpk/env/time.c
        src/glpk/env/tls.c
        src/glpk/intopt/cfg.c
        src/glpk/intopt/cfg1.c
        src/glpk/intopt/cfg2.c
        src/glpk/intopt/clqcut.c
        src/glpk/intopt/covgen.c
        src/glpk/intopt/fpump.c
        src/glpk/intopt/gmicut.c
        src/glpk/intopt/gmigen.c
        src/glpk/intopt/mirgen.c
        src/glpk/intopt/spv.c
        src/glpk/minisat/minisat.c
        src/glpk/misc/avl.c
        src/glpk/misc/bignum.c
        src/glpk/misc/dimacs.c
        src/glpk/misc/dmp.c
        src/glpk/misc/ffalg.c
        src/glpk/misc/fp2rat.c
        src/glpk/misc/fvs.c
        src/glpk/misc/gcd.c
        src/glpk/misc/hbm.c
        src/glpk/misc/jd.c
        src/glpk/misc/keller.c
        src/glpk/misc/ks.c
        src/glpk/misc/mc13d.c
        src/glpk/misc/mc21a.c
        src/glpk/misc/mt1.c
        src/glpk/misc/mygmp.c
        src/glpk/misc/okalg.c
        src/glpk/misc/qmd.c
        src/glpk/misc/relax4.c
        src/glpk/misc/rgr.c
        src/glpk/misc/rng.c
        src/glpk/misc/rng1.c
        src/glpk/misc/round2n.c
        src/glpk/misc/spm.c
        src/glpk/misc/str2int.c
        src/glpk/misc/str2num.c
        src/glpk/misc/strspx.c
        src/glpk/misc/strtrim.c
        src/glpk/misc/triang.c
        src/glpk/misc/wclique.c
        src/glpk/misc/wclique1.c
        src/glpk/mpl/mpl1.c
        src/glpk/mpl/mpl2.c
        src/glpk/mpl/mpl3.c
        src/glpk/mpl/mpl4.c
        src/glpk/mpl/mpl5.c
        src/glpk/mpl/mpl6.c
        src/glpk/mpl/mplsql.c
        src/glpk/npp/npp1.c
        src/glpk/npp/npp2.c
        src/glpk/npp/npp3.c
        src/glpk/npp/npp4.c
        src/glpk/npp/npp5.c
        src/glpk/npp/npp6.c
        src/glpk/proxy/proxy.c
        src/glpk/proxy/proxy1.c
        src/glpk/simplex/spxat.c
        src/glpk/simplex/spxchuzc.c
        src/glpk/simplex/spxchuzr.c
        src/glpk/simplex/spxlp.c
        src/glpk/simplex/spxnt.c
        src/glpk/simplex/spxprim.c
        src/glpk/simplex/spxprob.c
        src/glpk/simplex/spychuzc.c
        src/glpk/simplex/spychuzr.c
        src/glpk/simplex/spydual.c
        src/glpk/zlib/adler32.c
        src/glpk/zlib/compress.c
        src/glpk/zlib/crc32.c
        src/glpk/zlib/deflate.c
        src/glpk/zlib/gzclose.c
        src/glpk/zlib/gzlib.c
        src/glpk/zlib/gzread.c
        src/glpk/zlib/gzwrite.c
        src/glpk/zlib/inffast.c
        src/glpk/zlib/inflate.c
        src/glpk/zlib/inftrees.c
        src/glpk/zlib/trees.c
        src/glpk/zlib/uncompr.c
        src/glpk/zlib/zio.c
        src/glpk/zlib/zutil.c)

set(CMAKE_EXECUTABLE_SUFFIX .html)
add_executable(glpk-wasm ${glpk-wasm_SOURCES})
